@@ -191,6 +191,9 @@ public final class DNSIncoming extends DNSMessage {
         try {
             this.setId(_messageInputStream.readUnsignedShort());
             this.setFlags(_messageInputStream.readUnsignedShort());
+            if (this.getOperationCode() > 0) {
+                throw new IOException("Received a message with a non standard operation code. Currently unsupported in the specification.");
+            }
             int numQuestions = _messageInputStream.readUnsignedShort();
             int numAnswers = _messageInputStream.readUnsignedShort();
             int numAuthorities = _messageInputStream.readUnsignedShort();
@@ -253,23 +256,20 @@ public final class DNSIncoming extends DNSMessage {
         this._receivedTime = receivedTime;
     }
 
-
     /*
      * (non-Javadoc)
-     *
      * @see java.lang.Object#clone()
      */
     @Override
     public DNSIncoming clone() {
         DNSIncoming in = new DNSIncoming(this.getFlags(), this.getId(), this.isMulticast(), this._packet, this._receivedTime);
-         in._senderUDPPayload = this._senderUDPPayload;
-         in._questions.addAll(this._questions);
-         in._answers.addAll(this._answers);
-         in._authoritativeAnswers.addAll(this._authoritativeAnswers);
-         in._additionals.addAll(this._additionals);
-         return in;
+        in._senderUDPPayload = this._senderUDPPayload;
+        in._questions.addAll(this._questions);
+        in._answers.addAll(this._answers);
+        in._authoritativeAnswers.addAll(this._authoritativeAnswers);
+        in._additionals.addAll(this._additionals);
+        return in;
     }
-
 
     private DNSQuestion readQuestion() {
         String domain = _messageInputStream.readName();
